\name{NEWS}

\title{NEWS file for the survivalREC package}

  \section{Changes in version 0.1.2}{
  \itemize{
    \item{Add executation time in global tests of AUCtest function.}

  }
  
  }

  \section{Changes in version 0.1.1}{
  \itemize{
    \item{Remove the argument "db_wide in AUC.test function.}
    \item{Replace of argument of "db_long" to "data" in LR.test function.}
    \item{Change of x axis in plot.markovMSM funtion.}
  }
  
}
\section{Changes in version 0.1.0}{
  \itemize{
    \item{First release.}
  }

  
}