@@ -2,7 +2,7 @@ Package: markovMSM
 Type: Package
 Title: Methods for Checking the Markov Condition in Multi-State
         Survival Data
-Version: 0.1.2
+Version: 0.1.3
 Authors@R: c(
 	person(
 		given = "Gustavo",
@@ -36,17 +36,17 @@ Description: The inference in multi-state models is traditionally performed unde
              (2020) <doi:10.1093/biostatistics/kxaa030>).
 License: GPL-3
 Depends: R (>= 3.5.0)
-Imports: survidm, survival, mstate
+Imports: survival, mstate
 RoxygenNote: 7.2.1
 Encoding: UTF-8
 LazyLoad: yes
 LazyData: yes
 NeedsCompilation: yes
-Suggests: rmarkdown, knitr
+Suggests: rmarkdown, knitr, doParallel, devtools, bibtex, testthat
 VignetteBuilder: knitr
-Packaged: 2023-01-02 10:42:21 UTC; asus
+Packaged: 2023-02-15 08:54:35 UTC; asus
 Author: Gustavo Soutinho [aut, cre] (<https://orcid.org/0000-0002-0559-1327>),
   Luis Meira-Machado [aut] (<https://orcid.org/0000-0002-8577-7665>)
 Maintainer: Gustavo Soutinho <gustavosoutinho@sapo.pt>
 Repository: CRAN
-Date/Publication: 2023-01-05 19:40:02 UTC
+Date/Publication: 2023-02-15 09:10:02 UTC
