@@ -46,8 +46,6 @@ importFrom("stats",rpois)
 importFrom("stats",sd)
 importFrom("stats",terms)
 importFrom("stats",weighted.mean)
-importFrom("survidm",markov.test)
-importFrom("survidm",tprob)
 importFrom("survival",Surv)
 importFrom("survival",coxph)
 importFrom("survival",strata)
